--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Get Your Work Done.</h1>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <button type="button" class="btn btn-light btn-lg px-4 me-md-2"><a href="./login.html" style="text-decoration: none"> Login </a> </button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4"> Sign Up</button>
+            <button type="button" class="btn btn-dark btn-lg px-4"> Sign Up</button>
           </div>
         </div>
       </div>
