--- a/register.html
+++ b/register.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register yourself</title>
-    
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/register.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE-edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register yourself</title>
+  <link rel="stylesheet" href="style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="wrapper">
-        <form id="registrationForm" action="">
-            <h1>Registration</h1>
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="text" placeholder="Full Name" required>
-                    <i class='bx bxs-user'></i>
-                </div>
-                <div class="input-field">
-                    <input type="text" placeholder="Username" required>
-                    <i class='bx bxs-user'></i>
-                </div>
-            </div>
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="email" placeholder="Email" required>
-                    <i class='bx bxs-envelope' ></i>
-                </div>
-                <div class="input-field">
-                    <input type="number" placeholder="Phone Number" required>
-                    <i class='bx bxs-phone' ></i>
-                </div>
-                <div class="input-box">
-                    <div class="input-field">
-                        <input type="password" placeholder="Password" required>
-                        <i class='bx bxs-lock-alt' ></i>
-                    </div>
-                    <div class="input-field">
-                        <input type="password" placeholder="Confirm Password" required>
-                        <i class='bx bxs-lock-alt' ></i>
-                    </div>
-                </div>
-            </div>
-            <label><input type="checkbox">I hereby declare that the above information provided is true and correct</label>
-            <button type="submit" class="btn">Register</button>
-        </form>
-    </div>
+  <div class="wrapper">
+    <form id="registrationForm" action="" onsubmit="return validateForm()">
+      <h1>Registration</h1>
+      <div class="input-box">
+        <div class="input-field">
+          <input type="text" placeholder="Full Name" required>
+          <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="Username" required>
+          <i class='bx bxs-user'></i>
+        </div>
+      </div>
+      <div class="input-box">
+        <div class="input-field">
+          <input type="email" placeholder="Email" required>
+          <i class='bx bxs-envelope' ></i>
+        </div>
+        <div class="input-field">
+          <input type="tel" id="phoneNumber" pattern="[0-9\+]{10,}" placeholder="Phone Number" required oninput="checkPhoneNumber()">
+          <i class='bx bxs-phone' ></i>
+        </div>
+        <div class="input-box">
+          <div class="input-field">
+            <input type="password" id="password" placeholder="Password" required oninput="checkPassword()">
+            <i class='bx bxs-lock-alt' ></i>
+            <img src="hide.png" onclick="pass()" class="pass-icon" id="pass-icon">
+          </div>
+          <div class="input-field">
+            <input type="password" id="confirmPassword" placeholder="Confirm Password" required oninput="checkPassword()">
+            <i class='bx bxs-lock-alt' ></i>
+            <img src="hide.png" onclick="pass1()" class="pass-icon" id="pass-icon-confirm">
+          </div>
+        </div>
+      </div>
+      <label><input type="checkbox" required>I hereby declare that the above information provided is true and correct</label>
+      <p id="message"></p>
+      <button type="submit" class="btn">Register</button>
+    </form>
+  </div>
 
-    <script src="js/register.js"></script>
+  <script src="register.js"></script>
 </body>
 </html>
-
