--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register yourself</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/register.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -50,6 +50,6 @@
     </form>
   </div>
 
-  <script src="register.js"></script>
+  <script src="js/register.js"></script>
 </body>
 </html>
