--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PBL</title>
+  <title>Task Manager</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/index.css" />
 </head>
@@ -46,8 +46,8 @@
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Get Your Work Done.</h1>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-light btn-lg px-4 me-md-2"><a href="./login.html" style="text-decoration: none"> Login </a> </button>
-            <button type="button" class="btn btn-dark btn-lg px-4"> Sign Up</button>
+            <button type="button" class="btn btn-light btn-lg px-4 me-md-2"><a href="./login.html" style="text-decoration: none; color: black;"> Login </a> </button>
+            <button type="button" class="btn btn-dark  btn-lg px-4"><a href="./register.html" style="text-decoration: none; color:white"> Sign Up </a> </button>
           </div>
         </div>
       </div>
@@ -112,28 +112,28 @@
           <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Cleaning</h3>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
           <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#toggles2"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Plumbing</h3>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
           <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#geo-fill"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Delivery</h3>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
           <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#tools"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Others</h3>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
       </div>
